<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_login2">Login2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Benvingut Usuari</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Droid_desserts">Droid desserts</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">Has seleccionado un donut.</string>
    <string name="ice_cream_order_message">Has seleccionado una oreo.</string>
    <string name="froyo_order_message">Has seleccionado un helado.</string>
</resources>